# tictactoe

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/: tictactoe.h
core/src/: tictactoe.c
core/test/: libtictactoe_test.c
